<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">Safe Travels</string>
    <string name="activity_name_drive_mode">Safe Travels - Drive Mode</string>
    <string name="activity_name_settings">Safe Travels - Settings</string>
    <string name="activity_name_spot_check">Safe Travels - Spot Check</string>
    <string name="activity_name_chicago_gps">Set Coordinates to Center of Chicago</string>
    <string name="activity_name_crime_list">Safe Travels - Crime List</string>
    <string name="activity_name_crime_map">Crime Map</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="beatnumber">"Enter a Beat Number: "</string>
    <string name="getbeatcrime">Get Beat Crime</string>
    <string name="backtomain">Go Back to Main</string>
    <string name="getwardcrime">Get Ward Crime</string>
    <string name="enterward">Enter Ward:</string>
    <string name="locationscreen">Location Screen</string>
    <string name="sTotalCrimes">Total Crimes</string>
    <string name="lblcurrentlongitude">Current Longitude</string>
    <string name="lblcurrentlatitude">Current Latitude</string>
    <string name="msgWifiOff">The Wifi Connection is Off.</string>
    <string name="msgWiFiOn">WiFi Connection is On!</string>
    <string name="msgMobileOff">Data Network is Not Available</string>
    <string name="msgMobileOn">Data Network is Available!</string>
    <string name="msgNoConnection">Not Connected - Cannot Run Safe Travels</string>
    <string name="msgNoNetwork">Network not connected - Try to connect?</string>
    <string name="msgNoGPS">GPS not connected - Try to connect?</string>
    <string name="msgNoCrimeData">No crime data detected at this location.</string>
    <string name="msgLocationNotAvailable">Current Location is Not Available</string>
    <string name="msgMapNotAvailable">Map Not Available!</string>
    <string name="dlgConnectionLost">Connection Lost - Try to Restore?</string>
    <string name="startlocatonlistener">Start Location Listener</string>
    <string name="stoplocationlistener">Stop Location Listener</string>
    <string name="fraglocbuttonstartlocation">Start Location Updates</string>
    <string name="fraglocmanstop">Stop Location Updates</string>
    <string name="btntrend">MAP</string>
    <string name="btnspot">SPOT</string>
    <string name="btndrive">DRIVE</string>
    <string name="btnsettings">SETTINGS</string>
    <string name="btnfilters">Filters</string>
    <string name="btnbackground">HELP</string>
    <string name="btnLocationMap">Map</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="radSet2Blocks">2 Blocks (approx. 1/4 mile or 400 meters)</string>
    <string name="radSet4Blocks">4 Blocks (approx. 1/2 mile or 800 meters)</string>
    <string name="radSet3MetersTest">3 meters for testing</string>
    <string name="radSet8Blocks">8 Blocks (approx. 1 Mile or 1600 meters)</string>
    <string name="radSet100Meters">100 Meters</string>
    <string name="txtRefreshInterval">Drive Mode Refresh Interval</string>
    <string name="btnSetSave">Save Settings</string>
    <string name="txtNoConnectPleaseWait">Getting count please wait</string>
    <string name="title_activity_spot_check">SpotCheckActivity</string>
    <string name="title_activity_afragment">AFragmentActivity</string>
    <string name="lblCrimeHere">Here</string>
    <string name="lblPrevLat">"Previous Latitude: "</string>
    <string name="lblPrevLong">"Previous Longitude: "</string>
    <string name="lblCurrLat">"Current Lat: "</string>
    <string name="lblCurrLong">"Current Long: "</string>
    <string name="lblCurrBearing">"Current Bearing: "</string>
    <string name="lblAheadLat">"Ahead Lat: "</string>
    <string name="lblAheadLong">"Ahead Long: "</string>
    <string name="lblDistanceAhead">"Distance Ahead: "</string>
    <string name="lblCrimeAhead">waiting for direction ....</string>
    <string name="lblEnterAddress">Enter address to check:</string>
    <string name="lblCheck">Check</string>
    <string name="lblCrimeCountHere">"Tap to View Details"</string>
    <string name="lblBlank"></string>
    <string name="lblSound">Sound</string>
    <string name="lblSafeHere">SAFE HERE</string>
    <string name="lblCautionHere">CAUTION HERE</string>
    <string name="lblDangerHere">DANGER HERE</string>
    <string name="lblSafeAhead">SAFE AHEAD</string>
    <string name="lblCautionAhead">CAUTION AHEAD</string>
    <string name="lblDangerAhead">DANGER AHEAD</string>
    <string name="lblChicagoGPS">ChicagoGPS</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_map_view">MapViewActivity</string>
    <string name="chicago_locality">Chicago IL</string>
    <string name="location_hint">enter location</string>

</resources>
