<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="62dp" >

        <RadioButton
            android:id="@+id/RadioButton3Meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radSet3MetersTest" />

        <RadioButton
            android:id="@+id/RadioButton8Blocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radSet8Blocks" />

        <RadioButton
            android:id="@+id/RadioButton2Blocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radSet2Blocks" />

        <RadioButton
            android:id="@+id/RadioButton4Blocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radSet4Blocks" />

        <RadioButton
            android:id="@+id/RadioButton100Meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radSet100Meters" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:text="@string/txtRefreshInterval" />

    <Button
        android:id="@+id/buttonSave"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="31dp"
        android:text="@string/btnSetSave" />

</RelativeLayout>
