<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <TextView
         android:id="@+id/txtSpotCheckIntro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="15dp"
         android:text="@string/lblEnterAddress" />
     
    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtSpotCheckIntro"
        android:layout_below="@+id/txtSpotCheckIntro"
        android:ems="10"
        android:width="250dp" >
     
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtSpotCheckMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextAddress"
        android:layout_below="@+id/editTextAddress"
        android:layout_marginTop="10dp"
        android:text="@string/lblCrimeCountHere" />
    
      <TextView
          android:id="@+id/txtSpotCurrentLat"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textViewCrimeCount"
          android:layout_below="@+id/textViewCrimeCount"
          android:layout_marginTop="10dp"
          android:text="@string/lblCurrLat" />

    <TextView
        android:id="@+id/txtSpotCurrentLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtSpotCurrentLat"
        android:layout_below="@+id/txtSpotCurrentLat"
        android:text="@string/lblCurrLong" />

    <TextView
        android:id="@+id/textViewCrimeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/yellow"
        android:paddingBottom="40dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="40dp"
        android:text="@string/lblBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSpotCheckAddress"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtSpotCheckMessage"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/editTextAddress"
        android:text="@string/lblCheck" />

</RelativeLayout>
