<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/buttonspot"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/btnspot"
        android:typeface="sans" />

    <Button
        android:id="@+id/buttondrive"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="1dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_toLeftOf="@+id/buttonspot"
        android:text="@string/btndrive" />

    <Button
        android:id="@+id/buttontrend"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="1dp"
         android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_toRightOf="@+id/buttonspot"
        android:text="@string/btntrend"
        android:typeface="sans" />

</RelativeLayout>
